Build the Tacos Recipe
Add the content to create the Tacos recipe. Also added the img folder to hold all of our images for future recipes.

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -7,5 +7,37 @@
 </head>
 <body>
     <h1>Tacos</h1>
+    <img src="../img/tacos.jpg" alt="Tacos">
+    <figcaption>Smell the goodness!</figcaption>
+    <br>
+    <br>
+    <p>Here is a taste of a time when Mexican food was not as widely available in the United States as it is today, when parents and sports bars looked for food to serve children and those who eat like them, when the combination of crunch and fat and silk was divine. It still can be, if you avoid the taco kits of yore and make your own picadillo, then put it in hard-shell tacos and top how you like. For those who want to avoid prefabricated taco shells, make a form out of aluminum foil, fry fresh corn tortillas in shimmering neutral oil and then allow them to cool into shape on their aluminum saddle. Taco night. You can’t eat just two.</p>
+    <br>
+    <h2>Ingredients:</h2>
+    <ul></ul>
+        <li>2 tablespoons neutral oil, like canola, peanut or grapeseed</li>
+        <li>1 medium-size yellow onion, peeled and diced</li>
+        <li>4 cloves garlic, peeled and minced</li>
+        <li>2 pounds ground beef</li>
+        <li>2 tablespoons chile powder</li>
+        <li>1 tablespoon ground cumin</li>
+        <li>2 teaspoons kosher salt, or to taste</li>
+        <li>2 teaspoons freshly ground black pepper, to taste</li>
+        <li>2 teaspoons cornstarch</li>
+        <li>2 teaspoons smoked paprika (or substitute hot or sweet paprika)</li>
+        <li>1 teaspoon crushed red-pepper flakes, or to taste</li>
+        <li>1 cup chicken broth or beef broth, low-sodium if store-bought</li>
+        <li>12-18 hard taco shells</li>
+        <li>Toppings: grated cheese, sliced jalapeños, chopped tomatoes, shredded lettuce, sour cream, guacamole, etc.</li>
+    </ul>
+    <br>
+    <h2>Steps:</h2>
+    <ol>
+        <li>Place a large skillet over medium-high heat, and add the oil. When it begins to shimmer, add the onion, and cook until softened and starting to brown, approximately 5 to 7 minutes.</li>
+        <li>Add the garlic, and cook for a minute or so to soften, and then the ground beef. Cook until the beef is starting to brown, stirring and chopping with a spoon to break up the meat, approximately 5 to 7 minutes. Pour off excess fat, leaving only a tablespoon or two in the pan.</li>
+        <li>Heat oven to 325. Add the chile powder, cumin, salt, pepper, cornstarch, paprika and red-pepper flakes, and stir to combine. Add the broth, stir, bring to a simmer and cook uncovered until the sauce has thickened slightly, approximately 4 to 5 minutes.</li>
+        <li>As sauce cooks, place taco shells on a sheet pan, and toast in oven until they are crisp and smell nutty. Serve a few tablespoons of meat in each taco, along with whatever toppings you like.</li>
+    </ol>
+
 </body>
 </html>
