--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/tacos.html">Tacos</a>
+    <ul>
+        <li><a href="recipes/tacos.html">Tacos</a></li>
+        <li><a href="recipes/fajitas.html">Fajitas</a></li>
+        <li><a href="recipes/cinnamon_rolls.html">Cinnamon Rolls</a></li>
+    </ul>
 </body>
 </html>
